# rust-rocket-api

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/animal/: controller.rs  models.rs  routes.rs  service.rs
src/car/: controller.rs  mod.rs  models.rs  routes.rs  service.rs
src/db/: Cargo.toml  pool.rs
src/entity/: animal.rs  car.rs  mod.rs  prelude.rs
src/generic_crud/proc_macro/: Cargo.toml  proc_macro.rs
src/generic_crud/trait/: Cargo.toml  trait.rs
src/migrations/: Cargo.toml  README.md
src/migrations/src/: lib.rs  m20220101_000001_create_cars_table.rs  m20221227_085209_create_animal_table.rs
