[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "db"
path = "pool.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
sea-orm = { version = "0.10.5", features = ["sqlx-postgres", "runtime-async-std-native-tls"] }
sea-orm-rocket = "0.5.2"
async-trait = "0.1.60"

[dependencies.sea-orm-migration]
version = "^0.10.0"
features = ["sqlx-postgres", "runtime-async-std-native-tls"]
