[package]
name = "generic_crud_proc_macro"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "generic_crud_proc_macro"
path = "proc_macro.rs"
proc-macro = true

[dependencies]
db = { path = "../../db" }

syn = "1.0.107"
quote = "1.0.23"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "0.10.5", features = ["sqlx-postgres", "runtime-async-std-native-tls"] }
sea-orm-rocket = "0.5.2"
async-trait = "0.1.60"
heck = "0.4.0"